<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="eas_preformance"
        android:title="@string/boost_title"
        android:entries="@array/eas_preformance_entries"
        android:entryValues="@array/eas_preformance_values"
	    android:defaultValue="0"/>

    <SwitchPreference
        android:key="cpufreq_adj"
        android:title="@string/cpufreq_adj_title"
        android:summary="@string/cpufreq_adj_summary" />

    <Preference 
        android:key="cpufreq_little"
        android:title="@string/cpufreq_little_title"
        android:dependency="cpufreq_adj" />

    <Preference 
        android:key="cpufreq_big"
        android:title="@string/cpufreq_big_title"
        android:dependency="cpufreq_adj" />

    <SwitchPreference
        android:key="freq_boot_apply"
        android:title="@string/boot_apply_title"
        android:summary="@string/boot_apply_summary" />

</PreferenceScreen>
